Changed Application Icon to DG Technologies Logo. Also added debugging messages to the application to try and figure out why the message appended to the edit text shows 0, NaN, and Nan.